Code refactorings, tests. Added SpringFramework support.